--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ p{
     align-items: center;
     height: 120px;
     position: sticky;
+    top : 0;
 }
 li a {
     display: inline;
@@ -105,6 +106,7 @@ span{
     display: flex; 
     justify-content: space-around;   
 }
+
 h5{
     font-size: 50px;
     color: rgb(22, 204, 250);
