--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ p{
     display:flex;
     justify-content: right;
     align-items: center;
-    height: 120px;
+    height: 55px;
     position: sticky;
     top : 0;
 }
@@ -28,7 +28,7 @@ li a {
     align-items: center;
     text-decoration: none;
     color: rgb(245, 245, 245);
-    font-size: 40px;
+    font-size: 30px;
 
 }
 li{
@@ -56,12 +56,14 @@ height:75px;
 }
 .skills{ 
     background-color: hsla(240, 1%, 45%, 0.644);
+    margin: 50px;
+    padding: 25px;
 }
 .skill-element{
     list-style-type: none;
 }
-.EUD!{
-    margin: 50px;
+.EUD{
+    margin: 20px;
     padding: 25px;
 }
 h2 {
@@ -98,6 +100,12 @@ span{
     background-color: hsla(240, 1%, 45%, 0.644);
     color: #faf9f9;
     justify-content: space-around;
+    margin: 50px;
+    padding: 70px;
+}
+.Education-content:hover{
+    background-color: hsla(194, 63%, 48%, 0.644);
+    color: rgb(255, 255, 255);
 }
 .Project{background-color: rgb(93, 99, 102);
 
@@ -121,7 +129,15 @@ marquee{
     padding-top: 10px;
 }
 .skills1{
-    display: flex;
+    display: flex; 
+    margin: 50px;
+    padding: 70px;   
+}
+.skills:hover{
+    background-color: hsla(194, 63%, 48%, 0.644);
+    color: rgb(255, 255, 255);
+    margin: 50px;
+    padding: 70px;
 }
 /* about section */
 
@@ -129,10 +145,62 @@ marquee{
     display: flex;
     background-color: hsla(240, 1%, 45%, 0.644);
 }
+#body{ font-family: Arial, sans-serif;
+    background-color: #2ec7cc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;}
+
+
+.form-container {
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    width: 300px;
+  }
+
+  .form-container h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  textarea{width: 100%; padding: 10px 0; border: 1px solid #ccc; border-radius: 5px; height: 100%; }
+
+  button {
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background-color: #45a049;
+  }
 .Contact-content{
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: hsl(246, 80%, 58%);
     color: rgb(0, 0, 0);
+}
+
+.fa{
+    color: rgb(231, 15, 15);
+    font-size: 30px;
+    margin-right: 10px;
 }
